--- a/style.css
+++ b/style.css
@@ -1,10 +1,86 @@
 body 
 { margin: 100px; 
-color:#777; 
-background: #777;
+Border: #dddddd;
+background: #ffffff;
 width: 960px;
 font-size: 18px;
 text-align: center;
 font-family: Arial, Helvetica, sans-serif;
+color: #777777;
 }
 
+
+section
+{ background: #ffffff;
+    border-style: solid;
+    margin:20px;
+    clear:both;
+    
+}
+
+nav
+{ border-style: solid;
+    height: 120px;
+}
+
+
+
+nav ul
+{ list-style: none;
+    background:#ebebeb;
+    text-align: center;
+    padding: 0;
+    
+    }
+
+
+
+li
+{
+    color: #777;
+    margin: 20px;
+    padding: 20px;
+    float: right;
+list-style: none;
+
+
+}
+
+h1
+{
+    background: #4aaaa5;
+    text-align: left;
+    float:left;
+    padding: 20px;
+    margin: 0;
+    height:30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:#ebebeb;
+}
+
+img
+{
+    width:200px;
+    float:left;
+    clear: left;
+}
+
+h2
+{
+    clear:left;
+    color: #4aaaa5;
+    margin:8px;
+    width: 200px;
+    height: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+hr
+{clear: both;
+margin:10px;
+
+}
+
+footer
+{ background: #666666;
+
+}
