--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body 
 { margin: 100px; 
 Border: #dddddd;
-background: #ffffff;
+background-image: url("circle-blues.png");
 width: 960px;
-font-size: 18px;
+font-size: 18px;    
 text-align: center;
 font-family: Arial, Helvetica, sans-serif;
 color: #777777;
@@ -13,14 +13,16 @@ color: #777777;
 section
 { background: #ffffff;
     border-style: solid;
-    margin:20px;
+    margin:10px;
     clear:both;
     
 }
 
 nav
-{ border-style: solid;
-    height: 120px;
+{ 
+    height: 110px;
+    border: 1px solid #777777;
+    background: #ebebeb;
 }
 
 
@@ -52,8 +54,8 @@ h1
     text-align: left;
     float:left;
     padding: 20px;
-    margin: 0;
-    height:30px;
+    margin: 0px;
+    height:50px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:#ebebeb;
 }
@@ -82,5 +84,6 @@ margin:10px;
 
 footer
 { background: #666666;
-
+border-style: solid;
+border:5px solid #4aaaa5;
 }
