made changes to the CSS about me file, made changes to the header and the nav tags. Made changes to the h1 tag to make it fit better in the nav section by placing it in a div section. Add decorations to the a links within the nav section

--- a/Asset/css/aboutme.css
+++ b/Asset/css/aboutme.css
@@ -1,64 +1,79 @@
-body 
-{ margin: 100px; 
-Border: #dddddd;
 
-width: 960px;
-font-size: 18px;    
-text-align: center;
-font-family: Arial, Helvetica, sans-serif;
-color: #777777;
-}
+.name
+{
+    float: left;
+    background: #4aaaa5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#ebebeb;
+    font-size: 28px;
+    padding: 44px;
+    margin-left: 25px;
+    font-weight: 600;
 
-
-section
-{ background: #ffffff;
-    border-style: solid;
-    margin:10px;
-    clear:both;
-    
 }
 
 nav
 { 
     height: 110px;
-    border: 1px solid #777777;
+    border: 3px solid #777777;
     background: #ebebeb;
 }
 
-
-
 nav ul
-{ list-style: none;
-    background:#ebebeb;
-    text-align: center;
-    padding: 0;
+{ 
+    text-decoration: none;
+    
     
     }
-
-
-
-li
-{
+a{
+    text-decoration: none;
     color: #777;
-    margin: 20px;
-    padding: 20px;
+    font: weight 600;
+    
+}
+    
+li
+    { list-style: none;
+     font-size: 28px;
+    background:#ebebeb;
     float: right;
-list-style: none;
+    padding: 20px;
+   margin:25px;
+    
+  
+    }
 
+section
+{  display: inline-block;
+     background: #ffffff;
+    border-style: solid;
+    margin:10px;
+    clear:both;
+   
+    
+}
+
+h2{
+    float: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#4aaaa5;
+    font-size: 28px;
+    padding: 4px;
+    margin-left: 0px;
+    font-weight: bold;
 
 }
 
-.name
-{
-    background: #4aaaa5;
-    text-align: left;
-    float:left;
-    padding: 0px;
-    margin: 0px;
-    height:50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color:#ebebeb;
-}
+
+
+
+
+
+
+
+
+
+
 
 img
 {
@@ -69,15 +84,7 @@ img
     border: 5px solid #4aaaa5;
 }
 
-h2
-{
-    clear:left;
-    color: #4aaaa5;
-    margin:8px;
-    width: 200px;
-    height: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
+
 hr
 {clear: both;
 margin:10px;
@@ -96,6 +103,8 @@ h3
    
 }
 
-header{
-    float:top;
+header
+{ display:inline-block;
+    width: 100%;
 }
+
