--- a/Asset/css/portfolio.css
+++ b/Asset/css/portfolio.css
@@ -1,80 +1,98 @@
-body 
-{ margin: 100px; 
-Border: #dddddd;
-background-image: url("circle-blues.png");
-width: 960px;
-font-size: 18px;    
-text-align: center;
-font-family: Arial, Helvetica, sans-serif;
-color: #777777;
-}
 
+.name
+{
+    float: left;
+    background: #4aaaa5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#ebebeb;
+    font-size: 28px;
+    padding: 44px;
+    margin-left: 25px;
+    font-weight: 600;
 
-section
-{ background: #ffffff;
-    border-style: solid;
-    margin:1px;
-    height: 800px;
-
-    
 }
 
 nav
-{  
+{ 
     height: 110px;
-    border: 1px solid #777777;
+    border: 3px solid #777777;
     background: #ebebeb;
 }
 
-
-
 nav ul
-{ list-style: none;
-    background:#ebebeb;
-    text-align: center;
-    padding: 0;
+{ 
+    text-decoration: none;
+    
     
     }
-
-
-
-li
-{
+a{
+    text-decoration: none;
     color: #777;
-    margin: 20px;
-    padding: 20px;
+    font: weight 600;
+    
+}
+    
+li
+    { list-style: none;
+     font-size: 28px;
+    background:#ebebeb;
     float: right;
-list-style: none;
-
-
-}
-
-h1
-{
-    background: #4aaaa5;
-    text-align: left;
-    float:left;
     padding: 20px;
-    margin: 0px;
-    height:50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color:#ebebeb;
+   margin:25px;
+    
+  
+    }
+
+section
+{  display: inline-block;
+     background: #ffffff;
+    border-style: solid;
+    margin-left:100px;
+    width:85%;
+    clear:both;
+   
+    
 }
 
+h2{
+    float: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#4aaaa5;
+    font-size: 28px;
+    padding: 4px;
+    margin-left: 0px;
+    font-weight: bold;
 
+}
 
-h2
+img
+{ float: left;
+    position: relative;
+    width: 250px;
+    height: 200px;
+    background: #4aaaa5;
+    margin: 50px;
+    
+}
+
+div.textimages
 {
-    clear:left;
-    color: #4aaaa5;
-    margin:8px;
-    width: 200px;
-    height: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+   clear:both;
+    background: #4aaaa5;
+    text-align: center; 
+    
+   
 }
+
+
+    
+    
+    
+
+
 hr
 {clear: both;
-margin:10px;
+
 
 }
 
@@ -82,57 +100,19 @@ footer
 { background: #666666;
 border-style: solid;
 border:5px solid #4aaaa5;
+height: 60px;
+color: white;
+text-align:center;
+margin:25px;
+font-weight: bold;
+font-size: 15px;
 }
 
-label
-{
-float:left;
-clear:left;
-Margin: 5px;
-}
-textarea
-{ float:left;
-    clear:left;
-    width:75%;
-margin: 5px;
-border: 1px solid;
+
+   
+
+header
+{ display:inline-block;
+    width: 100%;
 }
 
-.column
-
-{ float: left;
-    width: 45%;
-    padding: 5px;
-}
-
-.row
-{ 
-    content: "";
-    clear: both;
-    display: inline-block;
-    margin: 15px;
-  }
-
-  p
-  { position: absolute;
-    bottom: 20px;
-    left:130px;
-    background-color: #4aaaa5;
-    color: white;
-    padding-left: 60px;
-    padding-right: 60px;
-    margin:0px;
-    
-
-  }
-
-
-div
-{
-    position: relative;
-}
-
-.block
-{
-    display: inline-block
-}
